test/errors/java_generator_error/zs/sql_table_parameter_provider_class_clash_error.zs
package sql_table_parameter_provider_class_clash_error;

sql_table ParameterProvider
{
    uint32 id sql "PRIMARY KEY NOT NULL";
};
